--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
 	"name": "ui-cropper",
 	"prettyName": "uiCropper",
+    "version": "1.0.6",
 	"authors": [{
 		"name": "Alex Kaul",
 		"email": "alexkaul@googlemail.com"
